[#WEB-675] Fixed alignment of tc-details tab buttons

--- a/dcm4chee/dcm4chee-web/trunk/dcm4chee-web-war/src/main/resources/org/dcm4chee/web/war/tc/css/tc-layout.css
+++ b/dcm4chee/dcm4chee-web/trunk/dcm4chee-web-war/src/main/resources/org/dcm4chee/web/war/tc/css/tc-layout.css
@@ -445,7 +445,7 @@ div.details-tabs div.tab-row ul
 div.details-tabs div.tab-row li 
 {
     margin: 1px;
-    display: inline;
+    display: inline-block;
     height: 23px;
     width: 100px;
 }
@@ -465,6 +465,7 @@ div.details-tabs div.tab-row a:link, div.details-tabs div.tab-row a:visited
     text-align: center;
     padding: 2px 0px 0px 0px;
     border: 1px solid transparent;
+    display: inline-block;
 }
 
 div.details-tabs div.tab-row a.disabled:link, div.details-tabs div.tab-row a.disabled:visited 
@@ -479,11 +480,11 @@ div.details-tabs div.tab-row li.selected a:link, div.details-tabs div.tab-row a:
     font-weight: bold;
     padding: 2px 0px 0px 0px;
     border: 1px solid transparent;
+    display: inline-block;
 }
 
 div.details-tabs div.tab-panel
 {
-	clear: left;
 	height: 31.25em;
 	position: relative;
     top: -6.75em;
